--- a/hotvideo/index.html
+++ b/hotvideo/index.html
@@ -11,7 +11,7 @@
 
 <body style="background-color:black;">
     <nav class="navbar navbar-expand-md bg-dark py-3">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="adsterralink"><span
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8"><span
                     class="bs-icon-sm bs-icon-rounded text-danger d-flex justify-content-center align-items-center me-2 bs-icon"><svg
                         xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                         viewBox="0 0 16 16" class="bi bi-badge-8k" style="font-size: 28px;">
@@ -26,9 +26,9 @@
                     navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-3">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active link-danger" href="adsterralink">4K Videos</a></li>
-                    <li class="nav-item"><a class="nav-link link-danger" href="adsterralink">HD+ Videos</a></li>
-                </ul><a class="btn btn-danger" role="button" href="adsterralink">Call me</a>
+                    <li class="nav-item"><a class="nav-link active link-danger" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8">4K Videos</a></li>
+                    <li class="nav-item"><a class="nav-link link-danger" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8">HD+ Videos</a></li>
+                </ul><a class="btn btn-danger" role="button" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8">Call me</a>
             </div>
         </div>
     </nav>
@@ -36,15 +36,15 @@
     <hr style="border-style: solid;border-color: var(--bs-form-invalid-color);">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col col-md-4 text-center m-2 p-2"><a href="adsterralink"><img src="assets/img/1.jpg" width="256"
+            <div class="col col-md-4 text-center m-2 p-2"><a href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8"><img src="assets/img/1.jpg" width="256"
                         height="230"></a>
-                <div class="btn-group" role="group"><a class="btn btn-danger btn-lg m-2" role="button" href="adsterralink"><svg
+                <div class="btn-group" role="group"><a class="btn btn-danger btn-lg m-2" role="button" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8"><svg
                             xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                             viewBox="0 0 16 16" class="bi bi-play m-1 fs-4">
                             <path
                                 d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z">
                             </path>
-                        </svg>Play HD</a><a class="btn btn-danger btn-lg d-lg-flex m-2" role="button" href="adsterralink"><svg
+                        </svg>Play HD</a><a class="btn btn-danger btn-lg d-lg-flex m-2" role="button" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8"><svg
                             xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                             viewBox="0 0 16 16" class="bi bi-play fs-4 m-1">
                             <path
@@ -52,14 +52,14 @@
                             </path>
                         </svg>Play 4K</a></div>
             </div>
-            <div class="col col-md-4 text-center m-2 p-2"><a href="adsterralink"><img src="assets/img/3.jpg" width="256" height="230"></a>
-                <div class="btn-group" role="group"><a class="btn btn-danger btn-lg m-2" role="button" href="adsterralink"><svg
+            <div class="col col-md-4 text-center m-2 p-2"><a href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8"><img src="assets/img/3.jpg" width="256" height="230"></a>
+                <div class="btn-group" role="group"><a class="btn btn-danger btn-lg m-2" role="button" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8"><svg
                             xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                             viewBox="0 0 16 16" class="bi bi-play m-1 fs-4">
                             <path
                                 d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z">
                             </path>
-                        </svg>Play HD</a><a class="btn btn-danger btn-lg d-lg-flex m-2" role="button" href="adsterralink"><svg
+                        </svg>Play HD</a><a class="btn btn-danger btn-lg d-lg-flex m-2" role="button" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8"><svg
                             xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                             viewBox="0 0 16 16" class="bi bi-play m-1 fs-4">
                             <path
@@ -69,14 +69,14 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col col-md-4 text-center m-2 p-2"><a href="adsterralink"><img src="assets/img/6.jpg" width="256" height="230"></a>
-                <div class="btn-group" role="group"><a class="btn btn-danger btn-lg m-2" role="button" href="adsterralink"><svg
+            <div class="col col-md-4 text-center m-2 p-2"><a href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8"><img src="assets/img/6.jpg" width="256" height="230"></a>
+                <div class="btn-group" role="group"><a class="btn btn-danger btn-lg m-2" role="button" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8"><svg
                             xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                             viewBox="0 0 16 16" class="bi bi-play m-1 fs-4">
                             <path
                                 d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z">
                             </path>
-                        </svg>Play HD</a><a class="btn btn-danger btn-lg d-lg-flex m-2" role="button" href="adsterralink"><svg
+                        </svg>Play HD</a><a class="btn btn-danger btn-lg d-lg-flex m-2" role="button" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8"><svg
                             xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                             viewBox="0 0 16 16" class="bi bi-play m-1 fs-4">
                             <path
@@ -84,14 +84,14 @@
                             </path>
                         </svg>Play 4K</a></div>
             </div>
-            <div class="col col-md-4 text-center m-2 p-2"><a href="adsterralink"><img src="assets/img/2.jpg" width="256" height="230"></a>
-                <div class="btn-group" role="group"><a class="btn btn-danger btn-lg m-2" role="button" href="adsterralink"><svg
+            <div class="col col-md-4 text-center m-2 p-2"><a href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8"><img src="assets/img/2.jpg" width="256" height="230"></a>
+                <div class="btn-group" role="group"><a class="btn btn-danger btn-lg m-2" role="button" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8"><svg
                             xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                             viewBox="0 0 16 16" class="bi bi-play m-1 fs-4">
                             <path
                                 d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z">
                             </path>
-                        </svg>Play HD</a><a class="btn btn-danger btn-lg d-lg-flex m-2" role="button" href="adsterralink"><svg
+                        </svg>Play HD</a><a class="btn btn-danger btn-lg d-lg-flex m-2" role="button" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8"><svg
                             xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                             viewBox="0 0 16 16" class="bi bi-play m-1 fs-4">
                             <path
@@ -140,8 +140,8 @@
                 </div>
                 <div class="col">
                     <ul class="list-inline text-danger my-2">
-                        <li class="list-inline-item"><a class="link-danger" href="adsterralink">Privacy Policy</a></li>
-                        <li class="list-inline-item"><a class="link-danger" href="adsterralink">Terms of Use</a></li>
+                        <li class="list-inline-item"><a class="link-danger" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8">Privacy Policy</a></li>
+                        <li class="list-inline-item"><a class="link-danger" href="https://www.toprevenuegate.com/ksnurcp1f?key=86a108acbabce4255d483d1037d2dda8">Terms of Use</a></li>
                     </ul>
                 </div>
             </div>
