--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Hotty.Com</title>
+    <title>Click Here to Watch</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="facebook-domain-verification" content="rx9yecp177b4cz7o2eqp4xx1a8le6n" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,13 +16,13 @@
 <body>
     <header>
 
-        <div class="logo"><a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c" target="_blank" rel="noopener noreferrer" class="ahare">Hotty.com</a></div>
+        <div class="logo"><a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002" target="_blank" rel="noopener noreferrer" class="ahare">Hotty.com</a></div>
         <div class="menu-icon"><i class="fas fa-bars"></i></div>
         <nav>
             <ul>
-                <li><a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c">Home</a></li>
-                <li><a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c">About</a></li>
-                <li><a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c">Contact</a></li>
+                <li><a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002">Home</a></li>
+                <li><a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002">About</a></li>
+                <li><a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -42,27 +42,27 @@
         </span>
         <div class="owl-carousel owl-theme">
 
-            <a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/1.jpg">
                 </div>
             </a>
-            <a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/2.jpg">
                 </div>
             </a>
-            <a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/3.jpg">
                 </div>
             </a>
-            <a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/4.jpg">
                 </div>
             </a>
-            <a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/5.jpg">
                 </div>
             </a>
-            <a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/6.jpg">
                 </div>
             </a>
@@ -76,32 +76,32 @@
                     <h3>Click on their image to watch them do the unspeakable.</h3>
                 </span>
                 <div class="ClientsType">
-                    <a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft TextCenter">
                             <img src="adsterrapic/1.jpg">
                         </div>
                     </a>
-                    <a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/2.jpg">
                         </div>
                     </a>
-                    <a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/3.jpg">
                         </div>
                     </a>
-                    <a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/4.jpg">
                         </div>
                     </a>
-                    <a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/5.jpg">
                         </div>
                     </a>
-                    <a href="https://typicallyapplause.com/rmp84v2k?key=7a88659474fb4659ce2c8a242cad154c" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.profitablegatecpm.com/gmsdd483?key=39481f10b44e23dcd3f8f39b16aa0002" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/7.jpg">
                         </div>
